karsoe.dk.AppHost/aspirate-output/Chart/templates/webfrontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webfrontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: karsoehome.dk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webfrontend
            port:
              number: 8080
